[package]
name = "rust_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
http-body-util = "0.1.3"
http1 = "0.0.2"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
