[package]
name = "rust_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
http-body-util = "0.1.3"
http1 = "0.0.2"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
postgres = "0.19.12"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
